fixed remarks